<resources>
    <string name="app_name">Animity</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_review">Review Details</string>
    <string name="anime_details">Anime Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>


    <string name="retry">Retry</string>
    <string name="next_episode">Next Episode</string>
    <string name="quality_auto">Auto</string>
    <string name="speed">1x</string>
    <string name="ep_x_on_y">Ep. %1$d on %2$s.</string>
    <string name="previous_episode">Previous Episode</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="synopsis">Synopsis</string>
    <string name="movies">Movies</string>
    <string name="new_season">New Season</string>
    <string name="recent_subbed_episodes">Recent Subbed Episodes</string>
    <string name="today_s_selection">Today\'s Selection</string>
    <string name="episode_num">8 Episodes</string>
    <string name="play_movie">Play movie</string>
    <string name="released">Released:</string>
    <string name="status">Status:</string>
    <string name="type">Type:</string>
    <string name="no_data">No Data</string>
    <string name="search_hint">Search…</string>
    <string name="result_go_back">goback</string>
    <string name="favorite">Add to Favorites</string>
    <string name="order">Order Animes</string>
    <string name="movie_not_released">Movie not released yet</string>
    <string name="episode_title">%s - %s</string>
    <string name="skip_loading">Skip Intro</string>
    <string name="total_episodes">%s Episodes</string>
    <string name="video_quality">Video Quality</string>
    <string name="video_skip_op">Skip Intro</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="donation">Donation</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Skip Intro Time</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="quality">Quality</string>
    <string name="title_settings">Settings</string>
    <string name="app_describe">test</string>
    <string name="download">Download</string>
    <string name="next">Next: </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_anilist">Sign In with AniList</string>
    <string name="sign_up">Register</string>
    <string name="terms_of_use"><![CDATA[Terms & Privacy]]></string>
    <string name="sign_in_as_guest">Continue as Guest</string>
    <string name="intro_slogan">Watch ON-THE-GO</string>
    <string name="important_to_know">Important to Know</string>
    <string name="login_info">You’ll be redirected to anilist.co to login/register. Make sure the URL is anilist.co before entering your email and password.</string>
    <string name="sign_in">Sign In</string>
    <string name="guest_message">Want to track your favorite Anime?</string>
    <string name="log_out">Log Out</string>
    <string name="animes">Animes</string>
    <string name="no_search_result">Sorry, Couldn\'t find anime with this keyword!</string>
    <string name="shared_anime_title">shared_anime_title</string>
    <string name="shared_anime_image">shared_anime_image</string>
    <string name="player_settings">Player Settings</string>
    <string name="donate_creator">Donate Author</string>
    <string name="connecting_please_wait">Connecting, Please Wait!</string>

    <string name="card_transition_name">anime_card_%1$s</string>
    <string name="anime_card_detail_transition_name">anime_card_detail</string>
    <string name="add_to_list">Add to List</string>
    <string name="option_1">Set as Complete</string>
    <string name="option_2">Set as Watching</string>
    <string name="option_3">Set as Planning</string>
    <string name="completed">Completed</string>
    <string name="watching">Watching</string>
    <string name="planning">Planning</string>
    <string name="dropped">Dropped</string>
    <string name="filler">FILLER</string>
    <string name="list_editor">List Editor</string>
    <string name="watch">Watch</string>
    <string name="progress">Progress</string>
    <string name="score">Score</string>
    <string name="score_suffix">/ 10</string>
    <string name="started_at">Started At</string>
    <string name="completed_at">Completed At</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="network_settings">Network Settings</string>
    <string name="provider_title">Select Provider</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="anime_provider">anime_provider</string>
    <string name="dns_provider">dns_provider</string>
    <string name="provider_settings">Provider Settings</string>
    <string name="skip_delay">skip_delay</string>
    <string name="forward_seek">forward_seek</string>
    <string name="backward_seek">backward_seek</string>
    <string name="pip">pip</string>
    <string name="channel_name">AnimityNotifications</string>
    <string name="channel_description">Animity notifications for anime airing</string>
    <string name="notification_title">New Notification</string>
    <string name="notifications">Notifications</string>
    <string name="quit">Quit Notifications</string>
    <string name="option_4">Set as Stopped Watching</string>
    <string name="paused">Paused</string>
    <string name="option_5">Set as Paused</string>
    <string name="message">Messages</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_start_date">Sort by Start Date</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_avg_score">Sort by Avg Score</string>
    <string name="sort_by_trending">Sort by Trending</string>
    <string name="sort_by_favorites">Sort by Favorites</string>
    <string name="sort_by_episode_size">Sort by Episode Size</string>
    <string name="general">General</string>
    <string name="check_for_update">Check for Updates…</string>
    <string name="check_for_update_key">check_for_update_key</string>
    <string name="open_counter">open_count_donate</string>
    <string name="maybe_later">maybe_later_dialog</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_schedule">Airing Animes</string>
    <string name="schedule">Add Schedule Reminder</string>


</resources>