<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/player_settings">

        <SeekBarPreference
            android:max="240"
            app:key="skip_delay"
            app:seekBarIncrement="5"
            app:title="@string/signature_title" />

        <SeekBarPreference
            android:max="60"
            app:key="forward"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:title="Seek Forward Time" />


        <SeekBarPreference
            android:max="60"
            app:key="forward"
            app:showSeekBarValue="true"
            app:title="Seek Backward Time" />

        <SwitchPreference
            app:key="pip"
            android:summary="Continues playback in a miniature player on top of other apps"
            app:title="Picture-inPicture" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/donation">
        <Preference
            android:summary="Klejvi Kapaj"
            app:icon="@drawable/baseline_paid_24"
            app:title="@string/donate_creator" />

    </PreferenceCategory>

</PreferenceScreen>