<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="animeInfo"
            type="com.kl3jvi.animity.data.model.ui_models.AnimeInfoModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/result_poster_holder"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:elevation="10dp"
                android:transitionName="@string/anime_card_detail_transition_name"
                app:cardCornerRadius="@dimen/roundedImageRadius">

                <ImageView
                    android:id="@+id/details_poster"
                    app:image="@{animeInfo.imageUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/result_title"
                    style="@style/Headline5"
                    tools:text="The Perfect "
                    android:text="@{animeInfo.animeTitle}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        tools:text="2021 nda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:paddingTop="3sp"
                        android:text="@string/released"
                        android:textColor="@color/grayTextColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/releaseDate"
                        tools:text="2021 nda"
                        android:text="@{animeInfo.releasedTime}"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:paddingTop="3sp"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        tools:text="2021 nda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:paddingTop="3sp"
                        android:text="@string/status"
                        android:textColor="@color/grayTextColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/status"
                        tools:text="2021 nda"
                        android:text="@{animeInfo.status}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:paddingTop="3sp"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        tools:text="2021 nda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:paddingTop="3sp"
                        android:text="@string/type"
                        android:textColor="@color/grayTextColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/type"
                        tools:text="2021 nda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:text="@{animeInfo.type}"
                        android:paddingTop="3sp"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nextEpisodeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/episodeToBeReleased"
                        tools:text="Episode 13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:paddingTop="3sp"
                        android:text="@string/next"
                        android:textColor="@color/grayTextColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/releaseTime"
                        tools:text=" Monday 13 Dec, 04:00 AM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3sp"
                        android:paddingTop="3sp"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>